<resources>
    <string name="app_name">Memory Training</string>
    <string name="msg_collection_title_not_unique">Название не уникально</string>
    <string name="first_launch_key">FIRST_LAUNCH_KEY</string>
    <string name="delete_collection_dialog_title">Удаление коллекции</string>
    <string name="delete_collection_dialog_message">Вы действительно хотите удалить выбранную коллекцию?</string>
    <string name="msg_forbid_delete_collection">Осталась только 1 коллекция</string>
    <string name="btn_mahjong_training_ru">маджонг</string>
    <string name="btn_colors_training_ru">цвета</string>
    <string name="btn_shapes_training_ru">фигуры</string>
    <string name="btn_words_training_ru">слова</string>
    <string name="btn_phrases_training_ru">фразы</string>
    <string name="btn_details_training_ru">детали</string>
    <string name="info">info</string>
    <string name="en">EN</string>
    <string name="ru">РУ</string>
    <string name="saved_lang_pos_key">LANG_POS_KEY</string>
    <string name="statistics">statistics</string>
    <string name="settings">settings</string>
    <string name="tv_play_info">Запустить тренировку с текущими настройками</string>
    <string name="tv_settings_info">Открыть настройки тренировки</string>
    <string name="tv_statistics_info">Открыть статистику</string>
    <string name="tv_swipe_info">Свайп вправо по кнопке тренировки - отображение кнопки настроек</string>
    <string name="tbr_mahjong_settings_title">Настройки: маджонг</string>
    <string name="remember_time">Время на запоминание (с):</string>
    <string name="tiles_amount">Количество костей:</string>
    <string name="equal_tiles_amount">Количество одинаковых костей:</string>
    <string name="tiles_amount_12">12</string>
    <string name="tiles_amount_24">24</string>
    <string name="equal_tiles_amount_2">2</string>
    <string name="equal_tiles_amount_3">3</string>
    <string name="equal_tiles_amount_4">4</string>
    <string name="equal_tiles_amount_6">6</string>
    <string name="preference_file_key">com.youngsophomore.PREFERENCE_FILE_KEY</string>
    <string name="saved_mahjong_remember_time_key">MAHJONG_REMEMBER_TIME</string>
    <string name="saved_mahjong_tiles_amount_key">MAHJONG_BONES_AMOUNT</string>
    <string name="saved_mahjong_equal_tiles_amount_key">MAHJONG_EQUAL_BONES_AMOUNT</string>
    <string name="tbr_colors_settings_title">Настройки: цвета</string>
    <string name="colors_amount">Количество цветов в последовательности:</string>
    <string name="distinct_colors_amount">Количество различных цветов:</string>
    <string name="max_repeat_colors_amount">Максимальное количество повторений цвета:</string>
    <string name="color_show_time">Время показа цвета (с):</string>
    <string name="max_repeat_colors_amount_0">0</string>
    <string name="max_repeat_colors_amount_1">1</string>
    <string name="max_repeat_colors_amount_2">2</string>
    <string name="max_repeat_colors_amount_3">3</string>
    <string name="max_repeat_colors_amount_4">4</string>
    <string name="saved_colors_amount_key">COLORS_AMOUNT</string>
    <string name="saved_distinct_colors_amount_key">DISTINCT_COLORS_AMOUNT</string>
    <string name="saved_max_repeat_colors_amount_key">MAX_REPEAT_COLORS_AMOUNT</string>
    <string name="saved_color_show_time_key">COLOR_SHOW_TIME</string>
    <string name="tbr_shapes_settings_title">Настройки: фигуры</string>
    <string name="shapes_amount">Количество фигур в последовательности:</string>
    <string name="distinct_shapes_amount">Количество различных фигур:</string>
    <string name="max_repeat_shapes_amount">Максимальное количество повторений фигуры:</string>
    <string name="shape_show_time">Время показа фигуры (с):</string>
    <string name="max_repeat_shapes_amount_0">0</string>
    <string name="max_repeat_shapes_amount_1">1</string>
    <string name="max_repeat_shapes_amount_2">2</string>
    <string name="max_repeat_shapes_amount_3">3</string>
    <string name="max_repeat_shapes_amount_4">4</string>
    <string name="saved_shapes_amount_key">SHAPES_AMOUNT</string>
    <string name="saved_distinct_shapes_amount_key">DISTINCT_SHAPES_AMOUNT</string>
    <string name="saved_max_repeat_shapes_amount_key">MAX_REPEAT_SHAPES_AMOUNT</string>
    <string name="saved_shape_show_time_key">SHAPE_SHOW_TIME</string>
    <string name="tbr_words_settings_title">Настройки: слова</string>
    <string name="tbr_words_add_collection_title">Новая коллекция</string>
    <string name="words_collection">Коллекция слов:</string>
    <string name="word_show_time">Время показа слова (с):</string>
    <string name="et_words_collection_title_hint">Название коллекции</string>
    <string name="et_words_collection_hint">Коллекция слов через пробел</string>
    <string name="init_words_collection">Спасибо за использование приложения, надеюсь вы найдёте его полезным</string>
    <string name="saved_words_collection_position_key">WORDS_COLLECTION_POSITION</string>
    <string name="saved_word_show_time_key">WORD_SHOW_TIME</string>
    <string name="words_collections_titles_key">WORDS_COLLECTIONS_TITLES</string>
    <string name="tbr_phrases_settings_title">Настройки: фразы</string>
    <string name="tbr_phrases_add_collection_title">Новая коллекция</string>
    <string name="phrases_collection">Коллекция фраз:</string>
    <string name="phrase_show_time">Время показа фразы (с):</string>
    <string name="et_phrases_collection_title_hint">Введите название фразы</string>
    <string name="et_phrases_collection_hint">Введите фразу</string>
    <string name="new_phrases_collection_key">NEW_PHRASES_COLLECTION</string>
    <string name="new_phrase_key">NEW_PHRASE</string>
    <string name="saved_phrases_collection_position_key">PHRASES_COLLECTION_POSITION</string>
    <string name="saved_phrase_show_time_key">PHRASE_SHOW_TIME</string>
    <string name="phrases_collections_titles_key">PHRASES_COLLECTIONS_TITLES</string>
    <string name="tbr_details_settings_title">Настройки: детали</string>
    <string name="tbr_details_add_image_title">Новое изображение</string>
    <string name="images_collection">Изображение:</string>
    <string name="image_show_time">Время показа изображения (с):</string>
    <string name="new_image">Новое изображение:</string>
    <string name="new_questions_collection">Коллекция вопросов</string>
    <string name="et_question_hint">Новый вопрос</string>
    <string name="et_answer_hint">Ответ на вопрос</string>
    <string name="new_questions_collection_key">NEW_QUESTIONS_COLLECTION</string>
    <string name="saved_images_collection_position_key">IMAGES_COLLECTION_POSITION</string>
    <string name="saved_image_show_time_key">IMAGE_SHOW_TIME</string>
    <string name="questions_collections_titles_key">QUESTIONS_COLLECTIONS_TITLES</string>
    <string name="chosen_img_key">CHOSEN_IMG_KEY</string>
    <string name="question_type_dialog_title">Вид вопроса</string>
    <string name="question_type_dialog_message">Новый вопрос содержит только один ответ?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">Ок</string>
    <string name="correct_answer_dialog_title">Правильность ответа</string>
    <string name="correct_answer_dialog_message">Является ли ответ правильным?</string>
    <string name="msg_dlg_too_many_correct_answers_title">Ошибка</string>
    <string name="msg_dlg_too_many_correct_answers_message">У нового вопроса может быть только один правильный ответ</string>
    <string name="delete_answer_dialog_title">Удаление ответа</string>
    <string name="delete_answer_dialog_message">Вы действительно хотите удалить ответ?</string>
    <string name="delete_question_dialog_title">Удаление вопроса</string>
    <string name="delete_question_dialog_message">Вы действительно хотите удалить вопрос?</string>
    <string name="et_new_image_dialog_hint">Введите уникальное название</string>
    <string name="new_image_dialog_title">Название нового изображения</string>
    <string name="tv_pretrain_tip_det">Для проверки правильности ответа нажмите на область вопроса</string>
    <string name="hyphen"> - </string>
    <string name="instruction">Инструкция</string>
    <string name="tv_save_settings">Сохранить настройки</string>
    <string name="tv_save_settings_and_play">Сохранить настройки и начать тренировку</string>
    <string name="mi_info_title">info</string>
    <string name="tv_add_words_collection">Добавить коллекцию слов</string>
    <string name="tv_confirm_words_collection">Сохранить коллекцию слов</string>
    <string name="tv_long_click">Долгое нажатие на выбранную коллекцию - удаление коллекции</string>
    <string name="tv_add_phrases_collection">Добавить коллекцию фраз</string>
    <string name="tv_add_phrase">Добавить фразу в коллекцию</string>
    <string name="tv_save_phrase">Сохранить фразу в коллекции</string>
    <string name="tv_confirm_phrases_collection">Подтвердить коллекцию фраз</string>
    <string name="tv_add_image">Добавить изображение и коллекцию вопросов</string>
    <string name="tv_choose_image">Выбрать изображение</string>
    <string name="tv_add_question">Добавить вопрос в коллекцию</string>
    <string name="tv_save_question">Сохранить вопрос в коллекции</string>
    <string name="tv_confirm_questions_collection">Подтвердить коллекцию вопросов</string>
    <string name="tv_add_answer">Добавить ответ</string>
    <string name="tv_save_answer">Сохранить ответ</string>
    <string name="tv_remind_image">Показать изображение</string>
    <string name="m_training_small_top_gl">0.08</string>
    <string name="m_training_big_top_gl">0.25</string>
    <string name="m_training_small_bottom_gl">0.96</string>
    <string name="m_training_big_bottom_gl">0.93</string>
    <string name="m_training_small_left_gl">0.1</string>
    <string name="finish_dialog_title">Тренировка завершена!</string>
    <string name="training_dur">Время тренировки:</string>
    <string name="seq_train_mistakes_amount">Количество ошибок:</string>
    <string name="phr_train_moves_amount">Количество ходов:</string>
    <string name="det_train_mistakes_amount">Количество ошибок (один вариант / несколько вариантов ответа):</string>
    <string name="tv_subtitle_time">Среднее время тренировки</string>
    <string name="tv_subtitle_tiles">Для количества костей</string>
    <string name="tv_subtitle_eq_tiles">Для количества одинаковых костей</string>
    <string name="tv_subtitle_colors">Для количества цветов</string>
    <string name="tv_subtitle_dist_colors">Для количества различных цветов</string>
    <string name="tv_subtitle_shapes">Для количества фигур</string>
    <string name="tv_subtitle_dist_shapes">Для количества различных фигур</string>
    <string name="tv_subtitle_time_wrd_phr">Среднее время тренировки и количество ошибок</string>
    <string name="tv_subtitle_time_wrd">Для различных размеров коллекций и времени показа слова</string>
    <string name="tv_subtitle_time_phr">Для различных размеров коллекций и времени показа фразы</string>
    <string name="tv_subtitle_time_det">Среднее время тренировки и количество ошибок (один / несколько вариантов ответов)</string>
    <string name="tv_subtitle_time_collect">Для различных коллекций</string>
    <string name="sec">с.</string>
    <string name="bc_time_to_moves_desc_mhj">Среднее количество ошибок в зависимости от времени запоминания</string>
    <string name="bc_amount_to_moves_desc_clr">Среднее количество ошибок в зависимости от количества цветов</string>
    <string name="bc_dist_amount_to_moves_desc_clr">Среднее количество ошибок в зависимости от количества различных цветов</string>
    <string name="bc_amount_to_moves_desc_shp">Среднее количество ошибок в зависимости от количества фигур</string>
    <string name="bc_dist_amount_to_moves_desc_shp">Среднее количество ошибок в зависимости от количества различных фигур</string>
    <string name="lbl_stat_tiles_12">12 костей</string>
    <string name="lbl_stat_tiles_24">24 кости</string>
</resources>