<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_add_phrase"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="@id/tv_add_phrase_info"
        app:layout_constraintBottom_toBottomOf="@id/tv_add_phrase_info"
        app:layout_constraintStart_toStartOf="parent"

        android:src="@drawable/round_add_to_collection_24"
        android:contentDescription="@string/tv_save_settings" />
    <TextView
        android:id="@+id/tv_add_phrase_hyphen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_add_phrase_info"
        app:layout_constraintBottom_toBottomOf="@id/tv_add_phrase_info"
        app:layout_constraintStart_toEndOf="@id/iv_add_phrase"

        android:text="@string/hyphen"
        style="@style/SettingsTextViewStyle"
        />
    <TextView
        android:id="@+id/tv_add_phrase_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_add_phrase_hyphen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginEnd="3dp"
        android:text="@string/tv_add_phrase"
        style="@style/SettingsTextViewStyle"

        />
    <ImageView
        android:id="@+id/iv_save_phrase"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="@id/tv_save_phrase_info"
        app:layout_constraintBottom_toBottomOf="@id/tv_save_phrase_info"
        app:layout_constraintStart_toStartOf="parent"

        android:src="@drawable/round_save_in_collection_24"
        />
    <TextView
        android:id="@+id/tv_save_phrase_hyphen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_save_phrase_info"
        app:layout_constraintBottom_toBottomOf="@id/tv_save_phrase_info"
        app:layout_constraintStart_toEndOf="@id/iv_save_phrase"

        android:text="@string/hyphen"
        style="@style/SettingsTextViewStyle"
        />
    <TextView
        android:id="@+id/tv_save_phrase_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_add_phrase_info"
        app:layout_constraintStart_toEndOf="@id/tv_save_phrase_hyphen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginEnd="3dp"
        android:text="@string/tv_save_phrase"
        style="@style/SettingsTextViewStyle"

        />

    <ImageView
        android:id="@+id/iv_confirm_collection"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="@id/tv_confirm_collection_info"
        app:layout_constraintBottom_toBottomOf="@id/tv_confirm_collection_info"
        app:layout_constraintStart_toStartOf="parent"

        android:src="@drawable/outline_library_add_check_24"
        />
    <TextView
        android:id="@+id/tv_confirm_collection_hyphen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_confirm_collection_info"
        app:layout_constraintBottom_toBottomOf="@id/tv_confirm_collection_info"
        app:layout_constraintStart_toEndOf="@id/iv_confirm_collection"

        android:text="@string/hyphen"
        style="@style/SettingsTextViewStyle"
        />
    <TextView
        android:id="@+id/tv_confirm_collection_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_save_phrase_info"
        app:layout_constraintStart_toEndOf="@id/tv_confirm_collection_hyphen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginEnd="3dp"
        android:text="@string/tv_confirm_phrases_collection"
        style="@style/SettingsTextViewStyle"

        />



</androidx.constraintlayout.widget.ConstraintLayout>